<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.abn.asilvia.abnvenue.ui.details.DetailsActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.abn.asilvia.abnvenue.ui.details.DetailsViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/main_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/main_padding"
                    android:gravity="center"
                    android:text="@string/venue_details_title"
                    android:textSize="@dimen/titles" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/main_padding"
                    android:background="@color/cardview_light_background"
                    android:elevation="@dimen/search_elevation"
                    app:cardCornerRadius="4dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/main_padding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/details_padding"
                            android:text="@string/details_description_title"
                            android:textSize="@dimen/titles" />

                        <TextView
                            android:id="@+id/tvDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/details_padding"
                            android:textSize="@dimen/body" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/details_padding"
                            android:text="@string/details_contact_information_title"
                            android:textSize="@dimen/titles" />

                        <TextView
                            android:id="@+id/tvContactInformation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/details_padding"
                            android:textSize="@dimen/body" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/details_padding"
                            android:text="@string/details_address_title"
                            android:textSize="@dimen/titles" />

                        <TextView
                            android:id="@+id/tvAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/details_padding"
                            android:textSize="@dimen/body" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="0.8"
                                android:text="@string/details_rating_title"
                                android:textSize="@dimen/titles" />

                            <TextView
                                android:id="@+id/tvRating"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="0.2"
                                android:gravity="center_vertical"
                                android:text="7"
                                android:textSize="@dimen/titles" />
                        </LinearLayout>


                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/main_padding"
                    android:gravity="center"
                    android:text="@string/venue_photos_title"
                    android:textSize="@dimen/titles" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvPhotos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />
            </LinearLayout>

        </ScrollView>
    </RelativeLayout>

</layout>